<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_marginBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <ImageView
            android:id="@+id/feed_post_event_icon"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_ojass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/feed_post_event_name"
                style="@style/FeedPostEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/primaryTextColor"
                />

            <TextView
                android:id="@+id/feed_post_sub_event_name"
                style="@style/FeedPostSubEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                />

            <TextView
                android:id="@+id/feed_post_time"
                style="@style/FeedPostEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >

        <RelativeLayout
            android:id="@+id/feed_post_image_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/feed_post_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_placeholder"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/feed_post_image_progress_bar"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/feed_post_content"
            style="@style/FeedPostContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone|web|email"
            android:textColorLink="@color/hyperlinkcolor"
            android:autoSizeTextType="uniform"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/feed_post_upvote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/upvote"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/like_textview"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="clip_vertical"
                android:text="@string/like"
                android:textColor="@color/primaryTextColor"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comments_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="clip_vertical"
                android:text="@string/comment"
                android:textColor="@color/primaryTextColor"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_post_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="clip_vertical"
                android:text="@string/share"
                android:textColor="@color/primaryTextColor"
                />

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/navigationDrawerText"
        />

</LinearLayout>