<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        >



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:background="@color/colorAccent"
                        >

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_horizontal"
                            android:text="OJASS"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            android:typeface="sans" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/techfest"
                            android:textColor="@color/primaryTextColor"
                            android:layout_gravity="center"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/ojass_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="12sp" />


                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="15dp"
                            android:autoLink="web"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:layout_gravity="center"
                            android:text="@string/about_us"
                            android:textSize="18sp"
                            android:textColor="@color/primaryTextColor"
                            />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
<!--                            ojass icon-->
                            <ImageButton
                                android:layout_margin="10dp"
                                android:layout_height="40dp"
                                android:layout_width="40dp"
                                android:background="@android:color/transparent"
                                android:id="@+id/fb"
                                android:src="@drawable/facebook_logo"
                                android:scaleType="centerCrop"
                                android:layout_gravity="center"
                                />

                            <ImageButton
                                android:layout_margin="10dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_icon_instagram"
                                android:background="@android:color/transparent"
                                android:id="@+id/insta"
                                />

                            <ImageButton
                                android:layout_margin="10dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_icon_twitter"
                                android:background="@android:color/transparent"
                                android:id="@+id/twitter"
                                />

                            <ImageButton
                                android:layout_margin="10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_icon_www"
                                android:background="@android:color/transparent"
                                android:id="@+id/web"
                                />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_margin="10dp"
                            android:background="#000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Helpdesk"
                            android:layout_marginLeft="15dp"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="@color/primaryTextColor"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_helpdesk_name1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Gaurav Mridul"
                                android:textSize="18sp"
                                android:padding="5dp"
                                android:textColor="@color/primaryTextColor"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="10dp"/>

                            <ImageButton
                                android:id="@+id/ib_helpdesk_phone1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:padding="5dp"
                                android:src="@android:drawable/stat_sys_phone_call"
                                android:background="@android:color/transparent"
                                android:layout_centerVertical="true"
                                android:tint="#34af23"
                                android:layout_marginRight="10dp"
                                android:layout_toLeftOf="@+id/ib_helpdesk_whatsapp1" />
                            <!--                                app:srcCompat="@drawable/ic_icon_whatsapp"-->
                            <ImageView
                                android:id="@+id/ib_helpdesk_whatsapp1"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:padding="5dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/whatsapp"
                                android:background="@android:color/transparent"
                                android:layout_marginRight="10dp"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_helpdesk_name2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Divyansh"
                                android:textSize="18sp"
                                android:padding="5dp"
                                android:textColor="@color/primaryTextColor"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="10dp"/>

                            <ImageButton
                                android:id="@+id/ib_helpdesk_phone2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:padding="5dp"
                                android:src="@android:drawable/stat_sys_phone_call"
                                android:background="@android:color/transparent"
                                android:layout_centerVertical="true"
                                android:tint="#34af23"
                                android:layout_marginRight="10dp"
                                android:layout_toLeftOf="@+id/ib_helpdesk_whatsapp2" />
                            <!--                                app:srcCompat="@drawable/ic_icon_whatsapp"-->
                            <ImageView
                                android:id="@+id/ib_helpdesk_whatsapp2"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:padding="5dp"
                                android:src="@drawable/whatsapp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:background="@android:color/transparent"
                                android:layout_marginRight="10dp"/>

                        </RelativeLayout>
                    </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</LinearLayout>
